@@ -1458,6 +1458,7 @@ Quentin Stafford-Fraser
 Frank Stajano
 Joel Stanley
 Anthony Starks
+David Steele
 Oliver Steele
 Greg Stein
 Marek Stepniowski
